--- a/SEA_Application/Views/AspNetOrderNotes/Details.cshtml
+++ b/SEA_Application/Views/AspNetOrderNotes/Details.cshtml
@@ -6,9 +6,9 @@
 
 
 }
-    <style>
+<style>
 
-            .modal-content {
+    .modal-content {
         position: relative;
         background-color: #fff;
         margin-top: 102px;
@@ -20,127 +20,143 @@
         box-shadow: 0 3px 9px rgba(0,0,0,.5);
         outline: 0;
     }
-    </style>
+</style>
 
-<label>@Html.ActionLink("Home", "Dashboard", "Account") > @Html.ActionLink("Order Notes", "Index", "AspNetOrderNotes") > <a href="#"><b>Details</b></a> </label>
-<h4 class="orange"> Order Notes Details </h4>
-<div class="box box-primary">
-    <div class="box-body">
+@*<label>@Html.ActionLink("Home", "Dashboard", "Account") > @Html.ActionLink("Order Notes", "Index", "AspNetOrderNotes") > <a href="#"><b>Details</b></a> </label>*@
 
-
-        @Html.HiddenFor(model => model.Id)
-
-        <div class="form-horizontal">
-            <h4>Order Notes</h4>
-
-            <script>
-                $(document).ready(function () {
-                    // $('input').prop('disabled', true);
-                    $('select').prop('disabled', true);
-                    $("#QuantityBtn").prop('readonly', false);
-                })
-            </script>
-
-            <hr />
-
-            <div class="form-group">
-                <label class="control-label col-md-2"> @Html.DisplayNameFor(model => model.Title):</label>
-                <div class="col-md-4">
-                    @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
-                    @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
-                </div>
-            </div>
+@*<h4 class="orange"> Order Notes Details </h4>*@
 
 
-            <div class="form-group">
-                <label class="control-label col-md-2"> @Html.DisplayNameFor(model => model.Description):</label>
-                <div class="col-md-4">
-                    @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
-                    @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-                </div>
-            </div>
+<div class="row">
+    <div class="col-md-12">
+        <div class="card">
+            <div class="card-body p-5">
 
-            <div class="form-group">
-                <label class="control-label col-md-2">Course Type</label>
-                <div class="col-md-4">
-                    @Html.EditorFor(model => model.CourseType, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
-                    @Html.ValidationMessageFor(model => model.CourseType, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="control-label col-md-2">Notes Type</label>
-                <div class="col-md-4">
-                    @Html.EditorFor(model => model.NotesType, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
-                    @Html.ValidationMessageFor(model => model.NotesType, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="control-label col-md-2">Price</label>
-                <div class="col-md-4">
-                    @Html.EditorFor(model => model.GrandTotal, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
-                    @Html.ValidationMessageFor(model => model.GrandTotal, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="control-label col-md-2"> Quantity</label>
-                <div class="col-md-4">
-                    <input id="QuantityBtn" class="form-control" type="number" name="name" value="1" min="1" max="5" onkeydown="return false" />
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="control-label col-md-2"> @Html.DisplayNameFor(model => model.AspNetSubject.SubjectName)</label>
-                <div class="col-md-4">
-                    @Html.EditorFor(model => model.AspNetSubject.SubjectName, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
-                    @Html.ValidationMessageFor(model => model.AspNetSubject.SubjectName, "", new { @class = "text-danger" })
-                </div>
-            </div>
+                <div class="box box-primary">
+                    <div class="box-body">
 
 
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <button id="confirmOrder" type="button" class="btn btn-info btn-primary" >Proceed</button>
-                    <button type="button" id="cancel" class="btn btn-default">Back</button>
+                        @Html.HiddenFor(model => model.Id)
 
-                </div>
-            </div>
+                        <div class="form-horizontal">
+
+                            <script>
+                                $(document).ready(function () {
+                                    // $('input').prop('disabled', true);
+                                    $('select').prop('disabled', true);
+                                    $("#QuantityBtn").prop('readonly', false);
+                                })
+                            </script>
 
 
-            <!-- Modal -->
-            <div class="modal fade" id="myModal" role="dialog">
-                <div class="modal-dialog">
 
-                    <!-- Modal content-->
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">Modal Header</h4>
+
+                            <div class="form-group">
+                                <label class="control-label col-md-2"> @Html.DisplayNameFor(model => model.Title):</label>
+                                <div class="col-md-4">
+                                    @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
+                                    @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+
+                            <div class="form-group">
+                                <label class="control-label col-md-2"> @Html.DisplayNameFor(model => model.Description):</label>
+                                <div class="col-md-4">
+                                    @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
+                                    @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label class="control-label col-md-2">Course Type</label>
+                                <div class="col-md-4">
+                                    @Html.EditorFor(model => model.CourseType, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
+                                    @Html.ValidationMessageFor(model => model.CourseType, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-md-2">Notes Type</label>
+                                <div class="col-md-4">
+                                    @Html.EditorFor(model => model.NotesType, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
+                                    @Html.ValidationMessageFor(model => model.NotesType, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label class="control-label col-md-2">Price</label>
+                                <div class="col-md-4">
+                                    @Html.EditorFor(model => model.GrandTotal, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
+                                    @Html.ValidationMessageFor(model => model.GrandTotal, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label class="control-label col-md-2"> Quantity</label>
+                                <div class="col-md-4">
+                                    <input id="QuantityBtn" class="form-control" type="number" name="name" value="1" min="1" max="5" onkeydown="return false" />
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label class="control-label col-md-2"> @Html.DisplayNameFor(model => model.AspNetSubject.SubjectName)</label>
+                                <div class="col-md-4">
+                                    @Html.EditorFor(model => model.AspNetSubject.SubjectName, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
+                                    @Html.ValidationMessageFor(model => model.AspNetSubject.SubjectName, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+                            <br />
+                            <div class="form-group">
+                                <div class="col-md-offset-2 col-md-10">
+                                    <button type="button" id="cancel" class="btn btn-primary rounded rounded-lg bg-transparent text-muted shadow-none mr-3">Back</button>
+                                    <button id="confirmOrder" type="button" class="btn btn-primary rounded rounded-lg">Proceed</button>
+
+
+                                </div>
+                            </div>
+
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="myModal" role="dialog">
+                                <div class="modal-dialog">
+
+                                    <!-- Modal content-->
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                            <h4 class="modal-title">Modal Header</h4>
+                                        </div>
+                                        <div class="modal-body">
+                                            <p>Are you sure you want to add this order to Cart?</p>
+
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button id="Order" type="button" class="btn btn-default" data-dismiss="modal">Yes</button>
+                                            <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
                         </div>
-                        <div class="modal-body">
-                            <p>Are you sure you want to add this order to Cart?</p>
 
-                        </div>
-                        <div class="modal-footer">
-                            <button id="Order" type="button" class="btn btn-default" data-dismiss="modal">Yes</button>
-                            <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
-                        </div>
                     </div>
 
                 </div>
+
             </div>
         </div>
-
-        </div>
-
     </div>
-    </div>
+</div>
+
 <script>
 
     $(document).ready(function () {
 
-          $("#cancel").click(function () {
+          $("#PageHeader").html("Order Notes");
+
+        $("#cancel").click(function () {
 
             window.location.href = '/AspNetOrderNotes/index';
 
