--- a/SEA_Application/Views/Shared/_StudentDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_StudentDashboardLayout.cshtml
@@ -140,7 +140,7 @@
                         </a>
                     </li>
 
-                    <li class="nav-item">
+                    <li class="nav-item" id="BuyNotes">
                         <a href="@(Url.Action("Index", "AspNetOrderNotes"))" class="nav-link nav-toggle">
 
                             <i class="sea-dash">
