--- a/SEA_Application/Views/AspNetUser/EditStudent.cshtml
+++ b/SEA_Application/Views/AspNetUser/EditStudent.cshtml
@@ -1400,7 +1400,6 @@ else if (User.IsInRole("Staff"))
 
                                         <input type="text" required class="form-control text_box_style totalfeeclass" name="TotalFee" id="TotalFee" readonly />
 
-
                                     }
 
                                 </div>
@@ -1417,7 +1416,7 @@ else if (User.IsInRole("Staff"))
 
                             <div class="form-group bmd-form-group my-3">
                                 <label class="control-label">Section <span class="red-mark">*</span></label>
-                                @Html.DropDownList("ClassID", null, htmlAttributes: new { @class = "form-control dropdownstyle"})
+                                @Html.DropDownList("ClassID", null, htmlAttributes: new { @class = "form-control dropdownstyle" })
                                 <br />
                                 <span style="color:red"> @ViewBag.SubjectsErrorMsg</span>
                             </div>
@@ -1508,8 +1507,8 @@ else if (User.IsInRole("Staff"))
                         }
                     }
 
-                  
-                    <button type="button" id="print" class="btn btn-default pull-right rounded rounded-lg" >Print</button>
+
+                    <button type="button" id="print" class="btn btn-default pull-right rounded rounded-lg">Print</button>
                     <button type="button" style="display:none" id="print2"></button>
                     <button type="submit" value="Register" id="FormSubmit" class="btn btn-primary pull-right rounded rounded-lg"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Update &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </button>
                     <button onclick="redirect()" id="cancel" type="button" class="btn btn-primary pull-right rounded rounded-lg bg-transparent text-muted shadow-none mr-3">
@@ -1538,11 +1537,11 @@ else if (User.IsInRole("Staff"))
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> <!--end of cart body -->
 
-        </div>
-    </div>
-</div>
+        </div><!--end of cart -->
+    </div> <!--end of column 12-->
+</div> <!--end of class row -->
 
 <script>
     function redirect() {
@@ -1577,22 +1576,22 @@ else if (User.IsInRole("Staff"))
 
         $("#print").click(function (e) {
 
-           // event.preventDefault();
+            // event.preventDefault();
 
-         
+
 
             var id = $("#Id").val();
-             window.open("/AspNetUser/Print?id=" + id, "_blank" );
- 
+            window.open("/AspNetUser/Print?id=" + id, "_blank");
+
             window.open("/AspNetUser/StudentPrint2?id=" + id, "_blank");
 
 
-         
 
-           
+
+
 
         })
-      
+
         function readURL(input) {
 
             $("#imgPreview").height("150");
@@ -1623,9 +1622,18 @@ else if (User.IsInRole("Staff"))
             if (TotalFee == "" && TotalFee < 0) {
                 return false;
             }
-            if (TotalFee == "") {
-                return false;
+
+            var VoucherExist = $("#VoucherExist").val();
+
+            //alert(VoucherExist);
+
+            if (VoucherExist == "1") {
+
+                if (TotalFee == "") {
+                    return false;
+                }
             }
+            
 
             $("#FormSubmit").attr("disabled", true);
 
