--- a/SEA_Application/Views/AspnetLessons/Create.cshtml
+++ b/SEA_Application/Views/AspnetLessons/Create.cshtml
@@ -441,11 +441,11 @@
                 data: { "TopicId": TopicId, "OrderBy": OrderBy },
                 success: function (data) {
 
-                    if (data == "Yes") {
+                       if (data.TopicExist == "Yes") {
 
 
                        // $("#CreateBtn").attr("disabled", true);
-
+                              $("#ErrorOrderBy").html(data.Msg);
                       //  $("#ErrorOrderBy").html("Selected order is already assigned to a lesson of same topic.");
                     }
                     else {
