--- a/SEA_Application/Views/AspnetLessons/Edit.cshtml
+++ b/SEA_Application/Views/AspnetLessons/Edit.cshtml
@@ -367,12 +367,14 @@
                 data: { "TopicId": TopicId, "OrderBy": OrderBy },
                 success: function (data) {
 
-                    if (data == "Yes") {
+                    if (data.TopicExist == "Yes") {
 
+                       // alert(data.TopicExist);
 
-                        $("#CreateBtn").attr("disabled", true);
+                      //  $("#CreateBtn").attr("disabled", true);
 
-                        $("#ErrorOrderBy").html("Selected order is already assigned to a lesson of same topic.");
+                       // $("#ErrorOrderBy").html("Selected order is already assigned to a lesson of same topic.");
+                        $("#ErrorOrderBy").html(data.Msg);
                     }
                     else {
 
